<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb067"
    tools:context=".VoterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btnApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/applyOnline"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/downloadVoter"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editVoter"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchVoter"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_bg" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trackApp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_bg" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnReprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reprint"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_bg" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnOfficial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voterOfficial"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/button_bg" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>