<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb067"
    tools:context=".RationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/banner_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFormA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/formA"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnFormB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/formB"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/checkAppStatus"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnChkAllot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/checkRationAllot"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDealer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/dealerChallan"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/officialPage"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnAadhharLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/rationAadhaarLink"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/rationCardDownload"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:text="@string/rationCardSearch"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>