<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb067"
    tools:context=".AwasActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/aboveBanner"
        android:layout_margin="2dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5860770870597755/7010820239"/>

    <LinearLayout
        android:layout_below="@id/aboveBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btnBeneficiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beneficiaryList"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnAwas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/awasList"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchBeneficiary"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/belowBanner"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5860770870597755/8519536540"/>

</RelativeLayout>