<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#67ffae"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_logo"
            app:civ_border_width="2dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            app:civ_border_color="#FFF"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_below="@id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rationCard"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWin"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Play Win Coins Daily"
                android:drawableLeft="@drawable/win"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_bg"
                android:textSize="30sp" />

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btnVoter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voterCard"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:background="@drawable/button_bg" />

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btnAwas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aawaasList"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:background="@drawable/button_bg" />

            <Button
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeLang"
                android:textColor="#FFFFFF"
                android:layout_margin="25dp"
                android:background="@drawable/button_bg" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/belowBanner"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                android:layout_gravity="center_horizontal"
                ads:adUnitId="ca-app-pub-5860770870597755/8519536540"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>